packages/nicolium/src/styles/new/statuses.scss
/* ... */
.⁂-status-content {
  position: relative;
  color: rgb(var(--color-gray-900));
  text-overflow: ellipsis;
  overflow-wrap: anywhere;

  &:focus {
    outline: 2px solid transparent;
    outline-offset: 2px;
  }

  .dark & {
    color: rgb(var(--color-gray-100));
  }

  &:has(button) {
    cursor: pointer;
  }

  &--preview + .⁂-read-more-button__container {
    margin-top: -0.5rem;
  }

  &--poll + .⁂-read-more-button__container .⁂-read-more-button__gradient {
    background-image: linear-gradient(to bottom, transparent, rgb(var(--color-gray-100)));

    .dark & {
      background-image: linear-gradient(to bottom, transparent, rgb(var(--color-primary-800)));
    }
  }

  &--quote + .⁂-read-more-button__container .⁂-read-more-button__gradient {
    .⁂-quoted-status:hover & {
      background-image: linear-gradient(to bottom, transparent, rgb(var(--color-gray-100)));
    }

    .dark.black .⁂-quoted-status:hover & {
      background-image: linear-gradient(to bottom, transparent, rgb(var(--color-primary-800)));
    }

    .dark .⁂-quoted-status:hover & {
      background-image: linear-gradient(to bottom, transparent, rgb(var(--color-primary-800)));
    }
  }

  &__container {
    display: flex;
    flex-direction: column;
    gap: 1rem;

    &:has(.⁂-poll) {
      padding: 1rem;
      border-radius: var(--radius-md);
      background-color: rgb(var(--color-gray-100));

      .dark & {
        background-color: rgb(var(--color-primary-800));
      }
    }
  }
}

.⁂-status-title {
  @include mixins.text($size: 2xl, $weight: medium);

  &--clamp span:first-child {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 3;
  }

  button {
    @include mixins.button($theme: muted, $size: xs);

    margin-left: 0.5rem;
    vertical-align: middle;

    svg {
      width: 1rem;
      height: 1rem;
      transition: transform 150ms var(--ease-default);
    }
  }

  &[aria-expanded='true'] button svg {
    transform: rotate(180deg);
  }
}

.⁂-timeline-gap {
  --separator-border: var(--color-gray-200);
  --separator-background: var(--color-primary-50);

  display: flex;
  flex-direction: column;
  align-items: stretch;

  margin: 1rem auto;
  border-color: rgb(var(--color-gray-200));
  border-top-width: 1px;
  border-bottom-width: 1px;

  button {
    @include mixins.button($theme: transparent, $size: xs);

    svg {
      width: 1rem;
      height: 1rem;
    }
  }

  .dark & {
    border-color: rgb(var(--color-gray-800));
  }

  .dark & {
    --separator-border: var(--color-gray-800);
    --separator-background: var(--color-gray-900);
  }

  button {
    margin: 0.5rem 0;
  }

  &__separator {
    position: relative;

    height: 4rem;
    margin: 0 -1rem;

    // Adapted from https://css-tricks.com/css-borders-using-masks/
    background:
      conic-gradient(
        from -45deg at bottom,
        transparent,
        rgb(var(--separator-border)) 1deg 89deg,
        transparent 90deg
      )
      bottom/2rem calc(50% + 1px) repeat-x,
      conic-gradient(
        from 135deg at top,
        transparent,
        rgb(var(--separator-border)) 1deg 89deg,
        transparent 90deg
      )
      top / 2rem calc(50% + 1px) repeat-x;
    background-position-y:
      calc(100% + 1px),
      -1px;

    span {
      position: absolute;
      top: 0;

      display: flex;
      align-items: center;
      justify-content: center;

      width: 100%;
      height: 100%;

      font-size: var(--text-sm);
      font-style: italic;
      color: rgb(var(--color-primary-600));
      text-align: center;

      background:
        conic-gradient(
          from -45deg at bottom,
          transparent,
          rgb(var(--separator-background)) 1deg 89deg,
          transparent 90deg
        )
        bottom/2rem calc(50% + 1px) repeat-x,
        conic-gradient(
          from 135deg at top,
          transparent,
          rgb(var(--separator-background)) 1deg 89deg,
          transparent 90deg
        )
        top / 2rem calc(50% + 1px) repeat-x;

      .dark & {
        color: rgb(var(--color-primary-400));
      }
    }
  }
}

div:first-child:has(> .⁂-timeline-gap) {
  .⁂-timeline-gap {
    margin-top: 0;
    border-top: none;

    button:first-child {
      margin-top: 0;
    }
  }
}

.⁂-timeline-status {
  &--connected-bottom .status__content-wrapper {
    padding-left: 54px;

    [dir='rtl'] & {
      padding-right: 54px;
      padding-left: 0;
    }
  }
}

div:has(> .⁂-timeline-status:not(.⁂-timeline-status--connected-bottom))
+ div:has(> .⁂-timeline-status) {
  .⁂-timeline-status {
    border-top: 1px solid rgb(var(--color-gray-200));

    .dark & {
      border-top-color: rgb(var(--color-gray-800));
    }
  }
}

.⁂-hashtags-bar {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;

  &__item {
    display: flex;
    align-items: center;

    padding: 0.25rem 0.375rem;
    border-radius: var(--radius-xs);

    font-size: var(--text-xs);
    font-weight: 500;
    line-height: var(--leading-xs);
    color: rgb(var(--color-primary-600));

    background-color: rgb(var(--color-gray-100));

    .dark & {
      color: #fff;
      background-color: rgb(var(--color-primary-700));
    }

    .dark.black & {
      background-color: rgb(var(--color-primary-900));
    }
  }

  button {
    @include mixins.text($theme: muted, $size: xs, $weight: semibold);

    &:hover {
      text-decoration: underline;
    }
  }
}
/* ... */

